# django-htmx-extras

./: HISTORY.md  LICENSE  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
django_htmx_extras/views/generic/: __init__.py  base.py  edit.py
src/django_htmx_extras/views/generic/: __init__.py  base.py  edit.py
tests/: settings.py  test_htmx_views.py
tests/templates/: base.html  template.html
tests/templates/partials/: htmx_template.html
