[metadata]
name = django-htmx-extras
version = 0.1.0
description = Extras for django-htmx.
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Rivera
author_email = support@tinytiny.app
url = https://github.com/Tiny-Tiny-App/django-htmx-extras/
project_urls =
    Changelog = https://github.com/Tiny-Tiny-App/django-htmx-extras/HISTORY.md
	Website = https://tinytiny.app

license = MIT
keywords = Django, htmx, django-htmx
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
install_requires =
    Django
	django-htmx
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

[flake8]
ignore = E203,E501,W503
